force-app/main/default/objects/LeaveApplication__c/LeaveApplication__c.object-meta.xml
<CustomObject>
    <label>请假申请</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>