force-app/main/default/objects/LeaveApplication__c/fields/ClassText__c.field-meta.xml
<CustomField>
    <fullName>ClassText__c</fullName>
    <formula>Class__r.Name</formula>
    <label>班级名称</label>
    <type>Text</type>
</CustomField>