force-app/main/default/objects/LeaveApplication__c/fields/LeaveDays__c.field-meta.xml
<CustomField>
    <fullName>LeaveDays__c</fullName>
    <formula>CEILING(LeaveEndDate__c - LeaveStartDate__c)</formula>
    <label>请假天数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>