force-app/main/default/objects/LeaveApplication__c/fields/LeaveEndDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveEndDate__c</fullName>
    <label>请假终止时间</label>
    <type>DateTime</type>
</CustomField>