force-app/main/default/objects/LeaveApplication__c/fields/LeaveReason__c.field-meta.xml
<CustomField>
    <fullName>LeaveReason__c</fullName>
    <label>请假原因</label>
    <type>TextArea</type>
</CustomField>