force-app/main/default/objects/LeaveApplication__c/fields/LeaveStartDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveStartDate__c</fullName>
    <label>请假开始时间</label>
    <type>DateTime</type>
</CustomField>