force-app/main/default/objects/LeaveApplication__c/fields/LeaveType__c.field-meta.xml
<CustomField>
    <fullName>LeaveType__c</fullName>
    <label>请假类别</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事假</fullName>
            </value>
            <value>
                <fullName>病假</fullName>
            </value>
            <value>
                <fullName>公假</fullName>
            </value>
            <value>
                <fullName>婚假</fullName>
            </value>
            <value>
                <fullName>产假</fullName>
            </value>
            <value>
                <fullName>探亲假</fullName>
            </value>
            <value>
                <fullName>年休假</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>