force-app/main/default/objects/LeaveApplication__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>专业</label>
    <length>20</length>
    <type>Text</type>
</CustomField>