force-app/main/default/objects/LeaveApplication__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>学生</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>请假申请</relationshipLabel>
    <relationshipName>LAStudent</relationshipName>
    <type>Lookup</type>
</CustomField>