force-app/main/default/objects/LeaveApplication__c/fields/StudentText__c.field-meta.xml
<CustomField>
    <fullName>StudentText__c</fullName>
    <formula>Student__r.LastName</formula>
    <label>学生名称</label>
    <type>Text</type>
</CustomField>