force-app/main/default/objects/LeaveApplication__c/fields/X1stApprover__c.field-meta.xml
<CustomField>
    <fullName>X1stApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>请假小于3天，需要班主任审批。此字段保存后自动赋值，无需手动填写。</inlineHelpText>
    <label>班主任审批</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LA1stApprover</relationshipName>
    <type>Lookup</type>
</CustomField>