force-app/main/default/objects/LeaveApplication__c/fields/X2ndApprover__c.field-meta.xml
<CustomField>
    <fullName>X2ndApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>请假3-7天，需要班主任、二级学院书记审批。此字段保存后自动赋值，无需手动填写。</inlineHelpText>
    <label>二级学院审批</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LA2ndApprover</relationshipName>
    <type>Lookup</type>
</CustomField>