force-app/main/default/objects/LeaveApplication__c/fields/X3rdApprover__c.field-meta.xml
<CustomField>
    <fullName>X3rdApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>请假大于7天，需要班主任、二级学院书记、教务处审批。此字段保存后自动赋值，无需手动填写。</inlineHelpText>
    <label>教务处审批</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LA3rdApprover</relationshipName>
    <type>Lookup</type>
</CustomField>