force-app/main/default/objects/LeaveApplication__c/recordTypes/StudentLeave.recordType-meta.xml
<RecordType>
    <fullName>StudentLeave</fullName>
    <active>true</active>
    <label>学生请假</label>
</RecordType>