force-app/main/default/objects/LeaveApplication__c/validationRules/LeaveDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LeaveDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>LeaveStartDate__c &gt; LeaveEndDate__c</errorConditionFormula>
    <errorMessage>请假开始时间不能晚于请假终止时间。</errorMessage>
</ValidationRule>