force-app/main/default/objects/LeaveApplication__c/listViews/AI_2nd_College_ListView.listView-meta.xml
<ListView>
    <fullName>AI_2nd_College_ListView</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Major__c</columns>
    <columns>SecondaryCollege__c</columns>
    <columns>Class__c</columns>
    <columns>Student__c</columns>
    <columns>StudentNumber__c</columns>
    <columns>LeaveType__c</columns>
    <columns>LeaveDays__c</columns>
    <columns>LeaveStartDate__c</columns>
    <columns>LeaveEndDate__c</columns>
    <columns>LeaveReason__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SecondaryCollegeText__c</field>
        <operation>equals</operation>
        <value>人工智能学院</value>
    </filters>
    <label>人工智能学院</label>
</ListView>