force-app/main/default/objects/LeaveApplication__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Major__c</columns>
    <columns>SecondaryCollege__c</columns>
    <columns>Class__c</columns>
    <columns>Student__c</columns>
    <columns>StudentNumber__c</columns>
    <columns>LeaveType__c</columns>
    <columns>LeaveDays__c</columns>
    <columns>LeaveStartDate__c</columns>
    <columns>LeaveEndDate__c</columns>
    <columns>LeaveReason__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>